@@ -123,6 +123,7 @@ PUBLIC DECLARE SUB AREAFILL (BYVAL mode AS INTEGER=0)
 PUBLIC DECLARE SUB AREA OUTLINE (BYVAL enabled AS BOOLEAN)
 
 PUBLIC DECLARE SUB PATTERN (BYVAL lineptrn AS UINTEGER = &HFFFF, BYREF areaptrn() AS INTEGER = NULL)
+PUBLIC DECLARE SUB PATTERN RESTORE
 
 PUBLIC DECLARE FUNCTION INKEY$ ()
 
